FIX z-index of navbar

--- a/_sass/_teamdigitale.scss
+++ b/_sass/_teamdigitale.scss
@@ -79,6 +79,9 @@
 }
 
 #navbar {
+	position: relative;
+	z-index: 9999;
+	
 	.navbar-top-link__item {
 		display: inline-block;
 	}
